--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,17 @@
+[package]
+name = "rcli"
+version = "0.1.0"
+edition = "2021"
+authors = ["ly.l <li19803030503@gmail.com>"]
+
 [workspace]
 
 members = [
-    "abi",
-    "assets",
-    "macros",
-    "network",
-    "utils",
-
-    # for testing purpose
-    "fixtures",
-    "test-utils",
-
 ]
+
+[dependencies]
+anyhow = "1.0.93"
+clap = { version = "4.5.21", features = ["derive"] }
+csv = "1.3.1"
+serde = { version = "1.0.215", features = ["derive"] }
+serde_json = "1.0.133"
